@@ -37,6 +37,10 @@ dpkg (1.15.8) UNRELEASED; urgency=low
   * Fix variable usage after delete in dselect.
   * Change default configure admindir to LOCALSTATEDIR/lib/dpkg from
     LOCALSTATEDIR/dpkg, so that we can use a correct --localstatedir=/var.
+  * Add two new dpkg options --path-exclude and --path-include for filtering
+    files on package installation. This allows embedded systems to skip
+    /usr/share/doc, manpages, etc. Based on work from Tollef Fog Heen and
+    Martin Pitt, thanks! Closes: #68788, #68861, #497304, #525567, #583902
 
   [ Updated programs translations ]
   * Russian (Yuri Kozlov). Closes: #579149
